--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "t*" ]
+    branches: [ trunk ]
   pull_request:
     branches: [ trunk ]
 
@@ -16,8 +16,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0 # otherwise git-cliff doesn't work
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
@@ -26,11 +24,3 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Install git-cliff
-      run: >-
-        mkdir -p /home/runner/.local/bin
-        && curl -L -o /tmp/git-cliff.tar.gz https://github.com/orhun/git-cliff/releases/download/v0.5.0/git-cliff-0.5.0-x86_64-unknown-linux-gnu.tar.gz
-        && tar -zxf /tmp/git-cliff.tar.gz -C /tmp
-        && cp /tmp/git-cliff-0.5.0/git-cliff /home/runner/.local/bin/
-    - name: Run git-cliff
-      run: git-cliff
