--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0 # otherwise, git-cliff doesn't work
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
