--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.ngeor</groupId>
   <artifactId>java</artifactId>
-  <version>4.9.4-SNAPSHOT</version>
+  <version>4.9.4</version>
   <packaging>pom</packaging>
   <name>java</name>
   <description>Parent pom for Java repository</description>
@@ -23,7 +23,7 @@
   <scm>
     <connection>scm:git:https://github.com/ngeor/java.git</connection>
     <developerConnection>scm:git:git@github.com:ngeor/java.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v4.9.4</tag>
     <url>https://github.com/ngeor/java</url>
   </scm>
   <properties>
