feat!: Support custom location for `keys.asc` and `pom.xml`
Breaking change: the parameter `--gpg-key` is renamed to `--gpg-key-name`

The new mandatory parameter `--gpg-key-file` points to the key file

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,8 @@ jobs:
         cache: 'maven'
     - run: >-
         ./scripts/release.py
-        --gpg-key ${{ secrets.GPG_KEY }}
+        --gpg-key-file ./scripts/keys.asc
+        --gpg-key-name ${{ secrets.GPG_KEY }}
         --gpg-passphrase ${{ secrets.GPG_PASSPHRASE }}
         --maven-username ${{ secrets.OSSRH_USERNAME }}
         --maven-password ${{ secrets.OSSRH_PASSWORD }}
