--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,23 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
+# Start of https://github.com/github/gitignore/blob/main/Maven.gitignore
 target/
-.idea/
-*.iml
-pom.xml.bak
-pom.xml.next
+pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
-pom.xml.tag
-release-pom.xml
+pom.xml.next
 release.properties
 dependency-reduced-pom.xml
-scripts/yak4j-cli.sh
+buildNumber.properties
+.mvn/timing.properties
+# https://maven.apache.org/wrapper/#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
 
+# Eclipse m2e generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# End of https://github.com/github/gitignore/blob/main/Maven.gitignore
+
+.idea/
 .vscode/
