--- a/pom.xml
+++ b/pom.xml
@@ -27,28 +27,27 @@
     <url>https://github.com/ngeor/java</url>
   </scm>
   <properties>
-    <assertj-bom.version>3.27.3</assertj-bom.version>
-    <central-publishing-maven-plugin.version>0.8.0</central-publishing-maven-plugin.version>
+    <assertj-bom.version>3.27.6</assertj-bom.version>
     <checkstyle-rules.version>7.0.0</checkstyle-rules.version>
     <checkstyle.version>10.13.0</checkstyle.version>
-    <commons-io.version>2.15.1</commons-io.version>
-    <commons-lang3.version>3.14.0</commons-lang3.version>
-    <immutables.version>2.10.1</immutables.version>
-    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
+    <commons-io.version>2.21.0</commons-io.version>
+    <commons-lang3.version>3.19.0</commons-lang3.version>
+    <immutables.version>2.11.6</immutables.version>
+    <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
     <jacoco.unit-tests.limit.instruction-ratio>25%</jacoco.unit-tests.limit.instruction-ratio>
     <java.version>21</java.version>
     <jsr305.version>3.0.2</jsr305.version>
-    <junit.version>5.11.4</junit.version>
+    <junit.version>5.14.1</junit.version>
     <maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>
     <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
-    <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
+    <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
     <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
     <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
-    <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
-    <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
+    <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
+    <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
     <maven-shade-plugin.version>3.5.2</maven-shade-plugin.version>
     <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <mockito.version>5.10.0</mockito.version>
@@ -58,7 +57,7 @@
     <rewrite-maven-plugin.version>5.23.1</rewrite-maven-plugin.version>
     <rewrite-static-analysis.version>1.3.1</rewrite-static-analysis.version>
     <sortpom-maven-plugin.version>4.0.0</sortpom-maven-plugin.version>
-    <spotless-maven-plugin.version>2.44.2</spotless-maven-plugin.version>
+    <spotless-maven-plugin.version>2.46.1</spotless-maven-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -130,11 +129,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
           <version>${maven-gpg-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.sonatype.central</groupId>
-          <artifactId>central-publishing-maven-plugin</artifactId>
-          <version>${central-publishing-maven-plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -255,6 +249,7 @@
           <plugin>
             <groupId>org.sonatype.central</groupId>
             <artifactId>central-publishing-maven-plugin</artifactId>
+            <version>0.8.0</version>
             <extensions>true</extensions>
             <configuration>
               <autoPublish>true</autoPublish>
